--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "autoprefixer": "^10.2.4",
     "concat": "^1.0.3",
+    "live-server": "^1.2.1",
     "node-sass": "^5.0.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.2.6",
